Implement LevelDBIndexAccess with comprehensive test coverage